Add multiple HTML files with JavaScript implementations for various algorithms and data structures

--- a/substring.html
+++ b/substring.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <script>
+        function largestsubstringwithoutRepeating(str){
+            let  start=0;
+          let maxlength=0;
         
+        }
+       
     </script>
 </body>
 </html>
